<resources>
    <string name="app_name">JSAMS</string>
    <string name="et_hint_username">Username</string>
    <string name="et_hint_password">Password</string>
    <string name="txtview_forgotpassword">Forgot Password</string>
    <string name="btn_text_login">LOGIN</string>
    <string name="title_progress_dialog">Please wait.</string>
    <string name="body_progress_dialog">Loading..</string>
    <string name="error_rate_500">Server error, please try again later.</string>
    <string name="error_login_404">Server Error,please try again later.</string>
    <string name="error_field_required">This  field is required.</string>
    <string name="valid_email">Please enter a valid email address.</string>
    <string name="error_No_Internet">No internet connection. The Information has been saved in the Pending Uploads. Please Upload the data manually when you have an internet connection.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="error_No_Internet_pending">No internet connection.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="textviewjsbank">\@JS Bank</string>
    <string name="text_welcome">Welcome To</string>
    <string name="text_js_bank">JS BANK</string>
    <string name="text_agent">AGENT MANAGEMENT</string>
    <string name="txt_takepicture">Take Picture</string>
    <string name="text_agintId">Agent ID</string>
    <string name="text_agentname">Name</string>
    <string name="textview_address">Address</string>
    <string name="textview_city">City</string>
    <string name="textview_province">Province</string>
    <string name="btn_submit"><![CDATA[Save & Submit]]></string>
    <string name="et_comments">Comments</string>
    <string name="form_submitting">Uploading.....</string>
    <string name="error_login_403">Incorrect Credentials</string>
    <string name="error_bad_request">Bad Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_upload_pending_data">Upload Pending Data</string>
    <string name="error_pictureemtpy">Cannot Proceed! Please Take the picture.</string>
    <string name="error_login_200">The Data has been uploaded Successfully.</string>
    <string name="error_login_504">Data Uploading Failed</string>
    <string name="btn_newregistration">New Registration</string>
    <string name="add_agent">Add Agent</string>
    <string name="action_send">OK</string>
    <string name="act_cancel">CANCEL</string>
    <string name="title_gps_enable">GPS</string>
    <string name="message_gps_enable">Please turn on your GPS.</string>
    <string name="textview_comments">Comments</string>
    <string name="txt_applicant_personal_info">Applicant Personal Information</string>
    <string name="tv_form_step">Step 1 of 8</string>
    <string name="tv_courtesy_title">Courtesy Title</string>
    <string name="tv_name">Name</string>
    <string name="error_invalidcity">Invalid City! Please select the City from the drop down list. If the desired city is not listed, please select the relevant District.</string>
    <string name="tv_cnic_passport">CNIC/Passport/NICOP/SNIC/NARA Number</string>
    <string name="tv_expiry_cnic_passport">Expiry CNIC/Passport/NICOP/SNIC/NARA Number</string>
    <string name="tv_dateofbirth">Date of Birth</string>
    <string name="tv_gender">Gender</string>
    <string name="tv_nationality">Nationality</string>
    <string name="tv_ntn_number">NTN Number</string>
    <string name="tv_placeofbirth">Place of Birth</string>
    <string name="tv_maritalstatus">Marital Status</string>
    <string name="tv_qualification">Qualification</string>
    <string name="tv_profession">Profession</string>
    <string name="tv_employer_business">Employer\'s/Business Name</string>
    <string name="tv_nature_of_business">Nature of Business</string>
    <string name="tv_designation">Designation</string>
    <string name="tv_mailing_address">Mailing Address</string>
    <string name="tv_father_husband_name">Father\'s/Husband\'s Name</string>
    <string name="tv_us_citizen">Are you a US Citizen/Resident</string>
    <string name="tv_expiry_date_visa">Expiry Date of VISA</string>
    <string name="tv_residential_address">Residential Address</string>
    <string name="tv_residential_contact_no">Residential Contact Number</string>
    <string name="tv_cell_number">Cell Number</string>
    <string name="tv_office_business_address">Office / Business Address</string>
    <string name="tv_office_contact_number">Office Contact Number</string>
    <string name="tv_telenor_golden_number">Telenor Golden Number</string>
    <string name="tv_email_address">E-mail Address</string>
    <string name="btn_text_next">Next</string>
    <string name="txt_applicant_account_info">ACCOUNT INFORMATION</string>
    <string name="tv_form_step_2">Step 2 of 8</string>
    <string name="tv_account_title">Account Title</string>
    <string name="type_of_current_account">Type of Current Account</string>
    <string name="type_of_account">Type of Accounts</string>
    <string name="currency">Currency</string>
    <string name="country_residental_status">Country Residential Status</string>
    <string name="operating_instructions">Operating Instructions</string>
    <string name="cheque_book_required">Cheque Book Required</string>
    <string name="yes_cheque_book_required">IF (Cheque Book Required) = Yes Then Numbers of Cheques Required</string>
    <string name="zakat_applicable">Zakat Applicable</string>
    <string name="txt_applicant_personal_joint_info">Personal Information\n(Joint / Guardian Applicant Section)</string>
    <string name="tv_form_step_3">Step 3 of 8</string>
    <string name="personal_info_name">Name</string>
    <string name="personal_info_nara_number">CNIC/Passport/NICOP/SNIC/NARA Number</string>
    <string name="personal_info_expiry_nara_number">Expiry CNIC/Passport/NICOP/SNIC/NARA Number</string>
    <string name="personal_info_expiry_dob">Date of Birth</string>
    <string name="personal_info_father_name">Father\'s/Husband\'s Name</string>
    <string name="personal_info_us_citizen">Are you a US Citizen/Resident</string>
    <string name="personal_info_nationality">Nationality</string>
    <string name="personal_info_nationalityntn_number">NTN Number</string>
    <string name="txt_next_of_kin">NEXT of KIN</string>
    <string name="tv_form_step_4">Step 4 of 8</string>
    <string name="next_of_kin_relationship">Relationship</string>
    <string name="next_of_kin_contact_number">Contact Number</string>
    <string name="tv_form_step_5">Step 5 of 8</string>
    <string name="txt_business_account_info">Business Account Information</string>
    <string name="business_name">Business Name</string>
    <string name="business_registration_number">Registration Number</string>
    <string name="business_account_info_date_of_registration">Date of Registration / Incorporation</string>
    <string name="business_account_info_place_of_registration">Place of Registration / Incorporation</string>
    <string name="fax_number">FAX #</string>
    <string name="tv_form_step_6">Step 6 of 8</string>
    <string name="txt_debit_card">Debit Card</string>
    <string name="tv_debit_card_request">Request for Debit Card</string>
    <string name="debit_card_name_on_debit_card">Name on Debit Card</string>
    <string name="debit_card_mother_name">Mother\'s Maiden Name</string>
    <string name="txt_supplementary_card">Supplementary Card</string>
    <string name="tv_form_step_7">Step 7 of 8</string>
    <string name="supplementary_card_full_name">Full Name of Supplementary Card Holder</string>
    <string name="supplementary_card_cnic">CNIC/Passport Number</string>
    <string name="supplementary_card_expiry_cnic_date">CNIC/Passport Expiry Date</string>
    <string name="supplementary_card_name_supplementary">Name on Supplementary Card</string>
    <string name="tv_form_step_8">Step 8 of 8</string>
    <string name="txt_e_banking">E-Banking</string>
    <string name="e_banking_sms_alert">SMS Alerts</string>
    <string name="e_banking_internet_banking">Internet Banking</string>
    <string name="e_banking_mobile_banking">Mobile Banking</string>
    <string name="e_banking_e_statement">E-Statement</string>
    <string name="e_banking_frequency">Frequency</string>
    <string name="btn_text_save">SAVE</string>
    <string name="txt_applicant_pre_account_info">Pre Account Information</string>
    <string name="txt_joint_account_need">Do You Need Joint Account</string>
    <string name="txt_debit_card_need">Do You Need Debit Card</string>
    <string name="txt_supplementary_card_need">Supplementary Card</string>
    <string name="txt_e_banking_need">Do You Need E-Banking</string>
    <string name="tv_relationship">Relationship</string>
    <string name="select">--select--</string>
</resources>
