<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:background="@color/white"
    android:layout_height="fill_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jsbankagent.management.application.AddAgentActivity">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/topToolbar"
        android:background="@color/colorPrimaryDark"
        android:layout_height="70dp">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/imageviewjslogo"
            android:src="@drawable/js_logo_white"
            android:paddingRight="5dp"
            android:textColor="@color/white"
            android:layout_gravity="end|center_horizontal" />
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/imageviewMenu"
            android:src="@drawable/menu_ic"
            android:paddingRight="5dp"
            android:layout_gravity="start|center_horizontal" />

    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topToolbar"
        android:layout_marginTop="5dp"
        android:id="@+id/relativelayout_btnpicture">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_takepicture"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/txt_takepicture"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/relativelayoutpicture"
        android:layout_below="@+id/relativelayout_btnpicture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imagview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/camera_icon"/>
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:id="@+id/formlayout"
        android:layout_below="@+id/relativelayoutpicture">
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_agintId" />

        <EditText
            android:id="@+id/agent_id"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:ems="10"
            android:layout_marginLeft="30dp"
            android:background="@drawable/border_edittext"
            android:inputType="text" >
            <requestFocus />
        </EditText>

    </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/textview_agentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_agentname" />

            <EditText
                android:id="@+id/agent_name"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:ems="10"
                android:inputType="text"
                android:layout_marginLeft="30dp"
                android:background="@drawable/border_edittext"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textview_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_address" />

            <EditText
                android:id="@+id/edittext_address"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:ems="10"
                android:inputType="text"
                android:layout_marginLeft="30dp"
                android:background="@drawable/border_edittext"/>

        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/textview_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_city"/>

            <EditText
                android:id="@+id/edittext_city"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:ems="10"
                android:layout_marginLeft="30dp"
                android:background="@drawable/border_edittext"
                android:inputType="text" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textview_province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_province" />

            <EditText
                android:id="@+id/edittext_province_"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:ems="10"
                android:inputType="text"
                android:layout_marginLeft="30dp"
                android:background="@drawable/border_edittext"/>

        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_below="@+id/formlayout"
        android:id="@+id/relativelayout_comments"
        android:layout_centerInParent="true">
    <EditText
        android:id="@+id/et_comments_"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:background="@drawable/border_edittext"
        android:hint="@string/et_comments"
        android:maxLines="10"
        android:gravity="top"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/relativelayout_comments"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/relativeLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:text="@string/btn_submit"
            android:paddingLeft="10dp"
            android:id="@+id/btnsave"
            android:paddingRight="10dp"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>
</ScrollView>